[package]
name = "baselog"
version = "0.1.0"
edition = "2018"
authors = ["jin.phd@gmail.com"]
description = "High performance sync style Rust logging facility dedicated for Linux"
# documentation = ""
# repository = ""
readme = "README.md"
keywords = ["log", "baselog", "filelog", "logging"]
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
test = []
default = ["termcolor"]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
termcolor = { version = "1.1.*", optional = true }
chrono = "0.4.*"
crossbeam= "0.8.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
simplelog = "0.10"

[[bench]]
name = "arrayqueue"
harness = false

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "simplebuf"
harness = false
